--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,9 @@ CHANGES
 0.2 (unreleased)
 ================
 
-- Nothing changed yet.
+- Installation documentation tweaks. (Auke Willem Oosterhoff)
 
+- .gitignore tweaks (Auke Willem Oosterhoff)
 
 0.1 (2014-04-08)
 ================
