--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,10 @@ CHANGES
 
 - Get version number in docs from setuptools.
 
+- Fix changelog so that PyPI page generates HTML correctly.
+
+- Fix PDF generation so that the full content is generated.
+
 0.2 (2014-04-24)
 ================
 
