--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,7 @@ CHANGES
 0.5 (unreleased)
 ================
 
-- Nothing changed yet.
-
+- Add ``more.static`` documentation on local components.
 
 0.4.1 (2014-07-08)
 ==================
