No more sphinxcontrib.youtube, as it broke readthedocs.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,11 +1,11 @@
 CHANGES
 *******
 
-0.6 (unreleased)
-================
+0.5.1 (unreleased)
+==================
 
-- Nothing changed yet.
-
+- Drop usage of sphinxcontrib.youtube in favor of raw HTML embedding,
+  as otherwise too many things broke on readthedocs.
 
 0.5 (2014-08-28)
 ================
